--- a/ionicSlider/materialProject/www/index.html
+++ b/ionicSlider/materialProject/www/index.html
@@ -109,7 +109,7 @@
       <h1 class="title">Ionic Blank Starter</h1>
     </ion-header-bar>
 
-    <ion-nav-view></ion-nav-view>
+    <ion-nav-view class="view-container "></ion-nav-view>
 
   </ion-pane>
 </body>
