adding home page

--- a/ionicSlider/mApp/www/index.html
+++ b/ionicSlider/mApp/www/index.html
@@ -59,8 +59,8 @@
 			</div>
 		</div>
 		<ion-pane>
-			<ion-header-bar class="bar-stable pageHead">
-				<h1 class="title pageTitle">Ionic Blank Starter</h1>
+			<ion-header-bar class="bar-stable pageHead" align-title="center" ng-controller="shareCtl as vm">
+				<h1 class="title pageTitle">{{vm.layout.title}}</h1>
 			</ion-header-bar>
 			<ion-nav-view class="view-container "></ion-nav-view>
 		</ion-pane>
