test absolute path failed

--- a/ionicSlider/test2/src/pages/about/about.html
+++ b/ionicSlider/test2/src/pages/about/about.html
@@ -7,5 +7,6 @@
 </ion-header>
 
 <ion-content padding>
+<h1> {{layout.title}} </h1>
 <button ion-button (click)="refresh()"> refresh </button>
 </ion-content>
